################################################################################
# Set minimum required version of cmake, project name and compile options
################################################################################
cmake_minimum_required(VERSION 3.5)
project(ros2_gazebo_simulation)
find_package(ament_cmake REQUIRED)
ament_package()